--- a/html5up-prologue/sims.html
+++ b/html5up-prologue/sims.html
@@ -69,7 +69,7 @@
 		<div id="main">
 
 		<!-- Intro -->
-			<section class="overview" id="truth">
+			<section class="overview" id="sims">
 				<div class="container">
 				
 				</div>
@@ -78,16 +78,18 @@
 			<section class="content two">
 				<div class="container">
 					<h2>Overview</h2>
-					<h4>Role: Designer</h4>
-					<h5>Showcased as part of Student Design Competition at Augmented Human 2015, Marina Bay Sands, Singapore. <br>
-					Award: First Winner, People's Choice Award. </h5>
+					<h4>Role: Developer</h4>
+					<h5>Showcased as part of Keio Media Design 4th Annual Forum, Japan, 2014</h5>
 					<br>
-					<p>As technology advances, we will be able to gather more and more information about ourselves. We will also have less choice as to what information remains private. This project is a social experiment, exploring the result of forced augmentation. <br><br>
+					<p>An interactive movie experience which attemps to close the gap between real space and virtual space (whatever happened inside the screen).<br><br>
 
-					We use facial expression to communicate, and hide, our feelings. But how much do we fake, and how much is real. We say things like “I’m excited!” when we aren’t. Are we even aware of how sincere/insincere we really are? What happens when we cannot control the privacy of our emotions? <br> <br>
+					When we watch a movie, we often thought "I don't like the ending", "What if we have another options". This experience, audiences were given a choice based on Alice on Wonderland storyline. <br> <br>
  
-					We propose to replace the top half of a user's face with an artificial digital version that changes expression according to heartbeat. When people wear this augmentation, will they start being more honest? Or will people still try to hide their emotions, creating weird situations where the top artificial half of a person's face shows nervousness/excitement, while the bottom real half tries to act cool.  
+					The Omron sensors were used to capture the audience body radiation, air flow, and light. How audience interact with the sensors will determine the outcome of the next scenes. A real life objects were used to create a relation with the virtual space. For example in these following images, Alice was shown in the screen, but the object she had to pick was shown in real space.
 					</p><br>
+					<img class="image img-responsive" src="images/project/sims1.jpg" alt="Tumblr Details" width="300"/>
+
+					<img class="image img-responsive" src="images/project/sims2.jpg" alt="Tumblr Details" width="300"/>
 				</div>
 			</section>
 		</div>
