--- a/html5up-prologue/tnt.html
+++ b/html5up-prologue/tnt.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="Angelia Stefani">
 		<meta property="og:title" content="Angelia Stefanie, Interaction Designer" />
 		<meta property="og:description" content="Indonesian-born, Tokyo-based UI/UX Designer. Received her master degree at Media Design from Keio University, Japan, she's currently starting her career as designer at Tokyo. Also, a bachelor in Informatics. Talk nerd to her!"/>
-		<meta property="og:image" content="http://portfolio.angelahwang.com/images/banner.jpg"/>
+		<meta property="og:image" content="http://portfolio.angelahwang.com/images/banner.jpg" />
 		<link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
     	<link rel="apple-touch-icon" href="images/favicon/apple-touch-icon.png">
     	<link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
@@ -69,7 +69,7 @@
 		<div id="main">
 
 		<!-- Intro -->
-			<section class="overview" id="truth">
+			<section class="overview" id="tnt">
 				<div class="container">
 				
 				</div>
@@ -77,19 +77,37 @@
 
 			<section class="content two">
 				<div class="container">
-					<h2>Overview</h2>
-					<h4>Role: Designer</h4>
-					<h5>Showcased as part of Student Design Competition at Augmented Human 2015, Marina Bay Sands, Singapore. <br>
-					Award: First Winner, People's Choice Award. </h5>
+					<h2>Tata n Taro Adventure</h2>
+					<h4>Thesis Project</h4>
+					<h5>Showcased in Advance of Computer Entertainment 2015, Iskandar, Malaysia <br>
+					Awards: Bronze Awards for Poster Presentation<br>
+					Publication can be read <a rel="nofollow noreferrer" href="http://dl.acm.org/citation.cfm?id=2832967">here</a></h5><br>
 					<br>
-					<p>As technology advances, we will be able to gather more and more information about ourselves. We will also have less choice as to what information remains private. This project is a social experiment, exploring the result of forced augmentation. <br><br>
-
-					We use facial expression to communicate, and hide, our feelings. But how much do we fake, and how much is real. We say things like “I’m excited!” when we aren’t. Are we even aware of how sincere/insincere we really are? What happens when we cannot control the privacy of our emotions? <br> <br>
- 
-					We propose to replace the top half of a user's face with an artificial digital version that changes expression according to heartbeat. When people wear this augmentation, will they start being more honest? Or will people still try to hide their emotions, creating weird situations where the top artificial half of a person's face shows nervousness/excitement, while the bottom real half tries to act cool.  
-					</p><br>
+					<p>Tata n Taro is my thesis for my master degree at Graduate School of Media Design, Keio University, Japan. As a student, we learnt how to be a media innovator by always applying the design thinking method in our creation - that is, to create human-centered design, rather than technology-centered design. <br><br></p> 
+					<h2>Idea</h2> 
+					<p>The idea is to create a game that allow children to collaborate with other children in different places using the media: Xbox Kinect. The reason to use kinect is described in my publications. 
+					The game is targeted to kindergarten children aged from 3 to 6 years old.  
+					</p><br> 
+					<img class="image featured" src="images/project/tnt2.jpg" alt="Tumblr Details" />
 				</div>
 			</section>
+
+			<section class="content three">
+				<div class="container">
+					<h2>Game Details</h2>
+					
+				</div>
+			</section>
+
+			<section class="content four">
+				<div class="container">
+					<h2>Demo</h2>
+					<div class="video embed-responsive embed-responsive-16by9">
+				        <iframe class ="embed-responsive-item" src="https://player.vimeo.com/video/191747560?byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				    </div>
+				</div>
+			</section>
+
 		</div>
 
 		<!-- Footer -->
